Se agrego el update

--- a/tienditacolegial/app/server/client/views/update-inventory.template.html
+++ b/tienditacolegial/app/server/client/views/update-inventory.template.html
@@ -1,63 +1,64 @@
 <div ng-controller="inventoryCtrl">
 
 
-        <md-content class="update-inventory" layout="column" flex = "80" layout-align = "center" flex-offset="10">
-            <h2> Agregar articulo al inventario </h2>
-            <md-input-container >
-                <label>Nombre del articulo</label>
-                <input type="text"  ng-model="articleName">
-            </md-input-container>
+    <md-content class="update-inventory" layout="column" flex = "80" layout-align = "center" flex-offset="10">
+        <h2> Agregar articulo al inventario </h2>
+        <md-input-container >
+            <label>Nombre del articulo</label>
+            <input type="text"  ng-model="articleName">
+        </md-input-container>
 
-            <md-input-container>
-                <md-select ng-model="selectedType" placeholder="Select the type of item" >
-                    <md-option ng-value="itemType" ng-repeat="itemType in itemTypes">{{itemType}}</md-option>
-                </md-select>
-            </md-input-container>
+        <md-input-container>
+            <md-select ng-model="selectedType" placeholder="Select the type of item" >
+                <md-option ng-value="itemType" ng-repeat="itemType in itemTypes">{{itemType}}</md-option>
+            </md-select>
+        </md-input-container>
 
-            <md-input-container >
-                <label>Descripcion del articulo </label>
-                <input type="text" id="descripcion" ng-model="descripcion">
-            </md-input-container>
+        <md-input-container >
+            <label>Descripcion del articulo </label>
+            <input type="text" id="descripcion" ng-model="descripcion">
+        </md-input-container>
 
-            <md-input-container >
-                <label> Precio del articulo </label>
-                <input type="text" id="articlePrice " ng-model="articlePrice">
-            </md-input-container>
+        <md-input-container >
+            <label> Precio del articulo </label>
+            <input type="number" id="articlePrice " ng-model="articlePrice">
+        </md-input-container>
 
-            <md-input-container >
-                <label> Enlace de la imagen </label>
-                <input type="text" id="imageurl" ng-model="imageurl">
-            </md-input-container>
-
-
-            <ng-show ng-show="selectedType == 'Camisa' || selectedType == 'Gorra' || selectedType == 'Pantalon'">
-                <h3> Tamaños en los que el articulo estara disponible y cantidad</h3>
-                <md-content  >
-
-                    <div ng-repeat="itemSize in itemSizes" >
+        <md-input-container >
+            <label> Enlace de la imagen </label>
+            <input type="text" id="imageurl" ng-model="imageurl">
+        </md-input-container>
 
 
-                    <input
-                            type="checkbox"
-                            name="selectedSizes[]"
-                            value="{{itemSizes.name}}"
-                            ng-model="itemSize.selected">
-                     {{itemSize.name}}
-                        <br>
+        <ng-show ng-show="selectedType == 'Camisa' || selectedType == 'Gorra' || selectedType == 'Pantalon'">
+            <h3> Tamaño del articulo y cantidad. (Solo seleccione un Tamaño)</h3>
+            <md-content>
 
-                    <md-input-container >
-                        <label> Cantidad  </label>
-                        <input type="text" id="cantidad" ng-model="itemSize.cantidad">
-                    </md-input-container>
+                <div ng-repeat="itemSize in itemSizes" >
+
+
+                    <input ng-click="updateSelection($index, itemSizes)"
+                           type="checkbox"
+
+                           value="{{itemSizes.name}}"
+                           ng-model="itemSize.selected">
+                    {{itemSize.name}}
                     <br>
 
+                </div>
+            </md-content>
+            <md-input-container>
+                <label> Cantidad </label>
+                <input type="number" id="cantidadArticulo " ng-model="cantidadArticulo">
+            </md-input-container>
+            <p>Si desea agregar mas de un tamaño selecione el tamaño y precione "Agregar Articulo", luego selecione
+                el otro tamaño deseado y vuelva a presionar el boton "Agregar Articulo"</p>
 
-                    </div>
-                </md-content>
-            </ng-show>
+        </ng-show>
 
-            <ng-show ng-show="selectedType == 'Libro'" >
-                <md-content class="update-inventory" layout="column" flex = "100" layout-align = "center">
+
+        <ng-show ng-show="selectedType == 'Libro'" >
+            <md-content class="update-inventory" layout="column" flex = "100" layout-align = "center">
                 <md-input-container>
                     <label>Autor del libro </label>
                     <input type="text" id="autor" ng-model="autor">
@@ -67,32 +68,32 @@
                     <label> Casa publicadora </label>
                     <input type="text" id="casaPublicadora " ng-model="casaPublicadora">
                 </md-input-container>
-                    <md-input-container>
-                        <label> Cantidad </label>
-                        <input type="text" id="cantidadArticulo " ng-model="cantidadArticulo">
-                    </md-input-container>
-                </md-content>
-            </ng-show>
-
-
-             <ng-show ng-show="selectedType == 'Articulo escolar'" >
-
-
-                <md-content class="update-inventory" layout="column" flex = "100" layout-align = "center">
-                    <md-input-container>
-                        <label>Fabricante </label>
-                        <input type="text" id="fabricante" ng-model="fabricante">
-                    </md-input-container>
-
-                    <md-input-container>
-                        <label> Cantidad </label>
-                        <input type="text" id="cantidadArticulo " ng-model="cantidadArticulo">
-                    </md-input-container>
-                </md-content>
-            </ng-show>
-
-
-            <md-button class="md-raised md-primary" ng-click="addItem(articleName, selectedType, descripcion, articlePrice, imageurl, autor, fabricante, casaPublicadora, cantidadArticulo)"> Agregar articulo </md-button>
-            <div flex-offset="10"></div>
+                <md-input-container>
+                    <label> Cantidad </label>
+                    <input type="number" id="cantidadArticulo " ng-model="cantidadArticulo">
+                </md-input-container>
             </md-content>
+        </ng-show>
+
+
+        <ng-show ng-show="selectedType == 'Articulo escolar'" >
+
+
+            <md-content class="update-inventory" layout="column" flex = "100" layout-align = "center">
+                <md-input-container>
+                    <label>Fabricante </label>
+                    <input type="text" id="fabricante" ng-model="fabricante">
+                </md-input-container>
+
+                <md-input-container>
+                    <label> Cantidad </label>
+                    <input type="number" id="cantidadArticulo " ng-model="cantidadArticulo">
+                </md-input-container>
+            </md-content>
+
+        </ng-show>
+
+        <md-content layout="column" flex = "80" layout-align = "center">
+            <md-button flex = "80" class="md-raised md-primary" ng-click="addItem(articleName, selectedType,        descripcion, articlePrice, imageurl, autor, fabricante, casaPublicadora, cantidadArticulo)"> Agregar articulo </md-button>
+        </md-content>
 </div>
